--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -58,3 +58,9 @@ td{
     flex-direction: row;
     justify-content: space-between;
 }
+
+@media only screen and (max-width: 800px){
+    .watchlist-containers{
+        justify-content: center;
+    }
+}
