--- a/css/main.css
+++ b/css/main.css
@@ -8,21 +8,25 @@
     text-decoration: none;
 }
 
-html, body{
-    height: 100%;
+html{
+    height: 100%;   
+}
+
+body{
+    position: relative;
+    padding-bottom: 80px;
+    min-height: 100%;
 }
 
 main{
-    min-height: 100%;
-    overflow-y: auto;
     padding: 20px 0px;
+    height: auto;
 }
 
 /* Wrapper styling */
 .wrapper{
     display: block;
     width: 90%;
-    min-height: 100%;
     margin: 0 auto;
 }
 
@@ -47,7 +51,8 @@ main{
 .basic-img-container{
     display: block;
     max-width: 350px;
-    max-height: 400px; 
+    max-height: auto;
+    margin: 0 auto;
 }
 
 /* Image styling */
@@ -55,6 +60,13 @@ img{
     display: block;
     width: 100%;
     margin: 0 auto;
+}
+
+.img-insert{
+    display: block;
+    width: 100%;
+    margin: 0 auto;
+    box-shadow: 2px 2px 8px black;
 }
 
 /* br and hr stylings */
@@ -148,6 +160,22 @@ hr{
 
 .btn3:hover{
     color: gray;
+}
+
+.btn4{
+    display: inline-block;
+    font-family: "Georgia";
+    font-size: 20px;
+    color: black;
+    margin: 0 auto;
+    text-align: center;
+    background-color: #e3e3e3;
+    border: black 1px solid;
+    padding: 20px;
+}
+
+.btn4:hover{
+    background-color: white;
 }
 
 /* Styling for general text contents */
@@ -308,6 +336,8 @@ footer{
     display: block;
     width: 100%;
     height: 80px;
+    position: absolute;
+    bottom: 0;
     background-color: black;
 }
 
