--- a/css/blog.css
+++ b/css/blog.css
@@ -1,3 +1,8 @@
+/* Background stylings */
+.blog-post-background{
+    background-color: #f0f0f0;
+}
+
 /* Wrapper styling */
 .blog-wrapper{
     display: block;
@@ -5,20 +10,65 @@
     margin: 0 auto;
 }
 
+.blog-wrapper-container{
+    display: block;
+    max-width: 600px;
+    margin: 10px auto 0px auto;
+    background-color: white;
+    position: relative;
+    box-shadow: 2px 2px 8px black;
+}
+
 /* Img styling */
 .title-img-ins{
     display: block;
     width: 200px;
     height: 150px;
+    z-index: -5;
     border-radius: 5px;
     margin-bottom: 10px;
 }
 
+.heading-img{
+    width: 100%;
+    height: 450px;
+    object-fit: cover;
+    filter: blur(10px);
+    box-shadow: 2px 2px 8px black;
+    margin-bottom: -400px;
+}
+
+.blog-heading{
+    display: flex;
+    background: #000 url("../blog-posts/b-img/newspapers-img.jpg");
+    background-size: cover;
+    width: 100%;
+    height: 250px;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    margin-bottom: 40px;
+}
+
+.color-overlay{
+    width: 100%;
+    height: 100%;
+    background: #000;
+    position: absolute;
+    opacity: 0.4;
+}
+
 /* Text styling */
+.heading-txt{
+    z-index: 2;
+    color: white;
+}
+
 .writing-text{
     font-family: "Georgia";
     font-size: 16px;
     line-height: 35px;
+    padding: 0px 20px;  
 }
 
 .basic-container-cnt-txt p, .detail-text-itl, .title-text-center, .detail-text-itl{
@@ -48,6 +98,10 @@
 .blog-btn:hover{
     background-color: rgb(185, 185, 185);
     color: white;
+}
+
+#resources{
+    padding: 20px 20px 40px 20px;
 }
 
 #resources a{
