--- a/css/dailies.css
+++ b/css/dailies.css
@@ -13,6 +13,7 @@
     display: flex;
     flex-direction: column;
     background-color: white;
+    justify-content: center;
     border: black 2px solid;
     padding: 20px;
 }
@@ -61,6 +62,11 @@
         margin: 20px 0px;
     }
 
+    iframe{
+       width: 100%;
+       height: 450px;
+    }
+
 @media only screen and (max-width: 800px){
     .additional-events{
         flex-direction: column;
@@ -68,5 +74,9 @@
 
     .left-event, .right-event{
         width: auto;
+    }
+
+    .iframe{
+        height: auto;
     }
 }
