--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,9 @@
+/* Text Shadow Styling */
+:root{
+    --shadow-black: 1px 5px 8px rgba(0, 0, 0, 0.8);
+    --shadow-white: 3px 3px 10px rgba(255, 255, 255, 0.8);
+}
+
 /* Text styling */
 .h1-white{
     font-family: "Lato";
@@ -6,7 +12,17 @@
     text-align: center;
     padding: 20px 0px;
     color: white;
-    text-shadow: 2px 2px 8px black;
+    text-shadow: var(--shadow-black);
+}  
+
+.h1-black{
+    font-family: "Lato";
+    font-size: 35px;
+    font-weight: 500px;
+    text-align: center;
+    padding: 20px 0px;
+    color: black;
+    text-shadow: var(--shadow-white);
 }  
 
 .p-white{
@@ -14,7 +30,16 @@
     font-size: 20px;
     line-height: 35px;
     color: white;
-    text-shadow: 2px 2px 8px black;
+    text-shadow: var(--shadow-black);
+    text-align: center;
+}
+
+.p-black{
+    font-family: "Georgia";
+    font-size: 20px;
+    line-height: 35px;
+    color: black;
+    text-shadow: var(--shadow-white);
     text-align: center;
 }
 
@@ -26,24 +51,13 @@
     min-height: 450px;
     border: black 1px solid;
     margin-bottom: 20px;
-}
-
-.bg-img{
-    position: absolute;
-    background-color: gray;
-    background-image: url("../img/chart-photo.png");opacity: 0.6;
-    background-position-y: 25%;
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 90%;
-    height: 450px;
-    z-index: -1;
+    background-color: rgba(0, 0, 0, 1.0);
 }
 
 .showcase-content{
     display: block;
-    max-width: 600px;
-    padding: 20px 0px;
+    max-width: 1000px;
+    padding: 20px;
     margin: 0 auto;
 }
 
@@ -53,7 +67,6 @@
     grid-gap: 20px;
     grid-template-columns: 1fr;
     justify-content: center;
-    align-items: center;
 }
 
 .main-box{
@@ -68,14 +81,14 @@
     background-position-y: 50%;
 }
 
-.top-right{
+/* .top-right{
     display: flex;
     flex-direction: column;
     background-color: black;
     justify-content: center;
     align-items: center;
     color: white;
-}
+} */
 
 .bottom-right{
     display: flex;
@@ -88,24 +101,47 @@
 
 @media only screen and (min-width: 800px){
     /* Desktop styling for main container (main-box, top-right, and bottom-right) */
-.main-container{
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    grid-template-areas:
-    'main-box main-box top-right'
-    'main-box main-box bottom-right';
-}
+    .main-container{
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr;
+        min-height: 400px;
+        grid-template-areas:
+        'main-box bottom-right'
+        'main-box bottom-right';
+    }
 
-.main-box{
-    grid-area: main-box;
-    height: 100%;
-}
+    #showcase{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        min-height: 450px;
+        border: black 1px solid;
+        margin-bottom: 20px;
+        background-color: rgba(0, 0, 0, 0.0);
+    }
 
-.top-right{
-    grid-area: top-right;
-}
+    .bg-img{
+        position: absolute;
+        background-color: black;
+        background-image: url("../blog-posts/b-img/newspapers-img.jpg");
+        background-position-y: 25%;
+        background-size: cover;
+        background-repeat: no-repeat;
+        width: 90%;
+        height: 515px;
+        z-index: -1;
+    }
 
-.bottom-right{
-    grid-area: bottom-right;
-}
+    .main-box{
+        grid-area: main-box;
+        height: 100%;
+    }
+
+    /* .top-right{
+        grid-area: top-right;
+    } */
+
+    .bottom-right{
+        grid-area: bottom-right;
+    }
 }
