Updated blog shown on index page

--- a/css/home.css
+++ b/css/home.css
@@ -124,9 +124,9 @@
     .bg-img{
         position: absolute;
         background-color: black;
-        background: #000 url("../blog-posts/b-img/google-business-model-img.JPG");
+        background: #000 url("../blog-posts/b-img/stress-upset-image.jpg");
         /* Background position could be changed depending on the picture */
-        background-position-y: 50%;
+        background-position-y: 70%;
         background-size: cover;
         background-repeat: no-repeat;
         width: 90%;
