--- a/css/blog.css
+++ b/css/blog.css
@@ -117,6 +117,18 @@
     color: rgb(0, 119, 255);
 }
 
+.book-links{
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+}
+
+.book-link-cover{
+    display: block;
+    width: auto;
+    height: 250px;
+}
+
 /* iframes styling for embedded video clips */
 iframe{
     display: block;
